fixed oversize issue and fix overlapping text

--- a/index.css
+++ b/index.css
@@ -70,9 +70,10 @@ body {
 
 #falling-leaves {
   position: relative;
-  /* height: 100vh; */
-  /* background-color: #87CEEB;
-  overflow: hidden; */
+  max-height:100vh;
+  overflow: hidden;
+  z-index: 0;
+
 }
 
 #leaves-container {
@@ -81,14 +82,19 @@ body {
   width: 100%;
   height: 100%;
   pointer-events: none;
+  z-index: 0;
+
+  
 }
 
 .leaf {
   
-  position: absolute;
+  position:absolute;
   width: 20px;
   height: 20px;
-  top:-50x;
+  z-index: 0;
+
+  
   
   
   border-radius: 50%;
@@ -103,6 +109,8 @@ body {
       transform: translateY(-100px);
       opacity: 0;
   }
+  
+  
   100% {
       background-color: #00ff05; 
 
@@ -138,11 +146,7 @@ body {
   }
   
   /* Change color on hover */
-  .menubar a:hover {
-    background-color: #0cf900;
-    color: rgb(34, 227, 16);
-    
-  }
+  
 
 
 .welcome-sec {
@@ -156,9 +160,8 @@ body {
 
 .headline { 
   font-size: 70px; 
-  
-  align-items: start;
-  padding-left: 200px;
+  margin-right: 600px;
+  text-align: center;  
 }
 .name-text{
   font-size: 60px;
@@ -168,7 +171,7 @@ body {
 .hero {
   width: 400px;
   height: auto;
-  text-align: center;
+  
   /* display: flex;
   flex-direction: column; */
   
@@ -176,13 +179,37 @@ body {
   display: block; /* Set the image as a block element */
   margin: 0 auto; /* Center horizontally */
   margin-top: -100px;
+  margin-bottom: 4px;
+  z-index: 10;
   
+}
+@media(max-width:1100px){
+  .hero{
+    margin-top: -35px;
+  }
+  .headline{
+    margin-right: 0;
+
+  }
 }
 
 #about-card {
-  width: 32rem;
+  /* width: 32rem;
   align-items: end;
-  margin-right: 80px;
+  margin-right: 80px; */
+  position: relative;
+  float: right;
+  width: 400px;
+  min-height: 250px;
+  background: rgba( 255, 255, 255, 0.15 );
+  box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+  backdrop-filter: blur( 18px );
+  -webkit-backdrop-filter: blur( 18px );
+  border: 1px solid rgba( 255, 255, 255, 0.18 );
+  border-radius: 1rem;
+  padding: 1.5rem;
+  z-index: 10;
+  color: whitesmoke;
 
   
 
@@ -222,13 +249,14 @@ body {
    
    
   backdrop-filter: blur(14px); 
-  background-color: rgba(255, 255, 255, 0.2); 
+  background-color: rgba(255, 255, 255, 0.2);
+  
   
 }
 
 #contform{
   position: relative;
-  max-width: fit-content;
+ 
   float:none;
 
    
@@ -295,19 +323,6 @@ body {
 
 
 
-
-/* h1, h2 {
-  font-family: 'Poppins', sans-serif;
-  font-weight: 600;
-  margin-bottom: 1rem;
-}
-
-p {
-  font-family: 'Open Sans', sans-serif;
-  font-size: 1.1rem;
-  line-height: 1.6;
-} */
-
 .navbar {
   background-color: #ffffff;
   padding: 10px 20px ;
@@ -372,54 +387,123 @@ p {
   margin-bottom: 100px; 
 }
 
+/* glow nft card.scss is used here */
 
 
 
-
-
-
-/* dark modee */
-
-.light-mode {
-  background-color: white;
-  color: black;
+.nft{
+  user-select:none;
+  max-width: 300px;
+  margin: 5rem auto;
+  border: 1px solid #ffffff22;
+  background-color: #282c34;
+  background: linear-gradient(0deg, rgba(40,44,52,1) 0%, rgba(17,0,32,.5) 100%);
+  box-shadow: 0 7px 20px 5px #00000088;
+  border-radius: .7rem;
+  backdrop-filter: blur(7px);
+  -webkit-backdrop-filter: blur(7px);
+  overflow: hidden;
+  transition: .5s all;
+  hr{
+    width: 100%;
+    border: none;
+    border-bottom: 1px solid #88888855;
+    margin-top: 0;
+  }
+  ins{
+    text-decoration: none;
+  }
+  .main{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    padding: 1rem;
+    .tokenImage{
+      border-radius: .5rem;
+      max-width: 100%;
+      height: auto;
+      object-fit: cover;
+      
+    }
+    .description{
+      margin: .5rem 0;
+      color: #a89ec9;
+    }
+    .tokenInfo{
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      .price{
+        display: flex;
+        align-items: center;
+        color: #ee83e5;
+        font-weight: 700;
+        ins{
+          margin-left: -.3rem;
+          margin-right: .5rem;
+        }
+      }
+      .duration{
+        display: flex;
+        align-items: center;
+        color: #a89ec9;
+        margin-right: .2rem;
+        ins{
+          margin: .5rem;
+          margin-bottom: .4rem;
+        }
+      }
+    }
+    .creator{
+      display: flex;
+      align-items: center;
+      margin-top: .2rem;
+      margin-bottom: -.3rem;
+      ins{
+        color: #a89ec9;
+        text-decoration: none;
+      }
+      .wrapper{
+        display: flex;
+        align-items: center;
+        border: 1px solid #ffffff22;
+        padding: .3rem;
+        margin: 0;
+        margin-right: .5rem;
+        border-radius: 100%;
+        box-shadow: inset 0 0 0 4px #000000aa;
+        img{
+          border-radius: 100%;
+          border: 1px solid #ffffff22;
+          width: 2rem;
+          height: 2rem;
+          object-fit: cover;
+          margin: 0;
+        }
+      }
+    }
+  }
+  ::before{
+    position: fixed;
+    content: "";
+    box-shadow: 0 0 100px 40px #ffffff08;
+    top: -10%;
+    left: -100%;
+    transform: rotate(-45deg);
+    height: 60rem;
+    transition: .7s all;
+  }
+  &:hover{
+    border: 1px solid #ffffff44;
+    box-shadow: 0 7px 50px 10px #000000aa;
+    transform: scale(1.015);
+    filter: brightness(1.3);
+    ::before{
+      filter: brightness(.5);
+      top: -100%;
+      left: 200%;
+    }
+  }
 }
 
-.dark-mode {
-  background-color: black;
-  color: white;
-}
 
-
-
-/* .toggle-switch {
-  position:sticky;
-  width: 60px;
-  height: 30px;
-  background-color: #ccc;
-  border-radius: 30px;
-  cursor: pointer;
-  transition: background-color 0.3s;
-  float: right;
-  
-}
-
-.toggle-switch::before {
-  content: '';
-  position: absolute;
-  top: 3px;
-  left: 3px;
-  width: 24px;
-  height: 24px;
-  background-color: white;
-  border-radius: 50%;
-  transition: transform 0.3s;
-}
-
-.dark-mode .toggle-switch {
-  background-color: #4b4b4b;
-}
-
-.dark-mode .toggle-switch::before {
-  transform: translateX(30px);
-} */
